--- a/roles/wartest/tasks/main.yml
+++ b/roles/wartest/tasks/main.yml
@@ -32,7 +32,7 @@
 - name: run container
   docker_container:
     name: wartest
-    image: "registry.gitlab.com/dz6061801/jenkins:compil-12"
+    image: "{{ image }}"
     ports:
       - "8081:8080"
     state: started
